Objeto MySQLConnector esta implementado y funcionando, se ha añadido el objeto LectorDeArchivosCSV y efectivamente se puede leer un archivo de configuracion.